[package]
name = "s3-proxy"
version = "0.1.0"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]

[dependencies]
actix-web = "0.7.8"
log = "0.4.5"
log4rs = "0.8.0"
rusoto_core = "0.34.0"
rusoto_s3 = "0.34.0"
serde = "1.0.79"
serde_derive = "1.0.79"
toml = "0.4.6"
failure = "0.1.2"
futures = "0.1.24"
bytes = "0.4.10"
num_cpus = "1.8.0"
mime_guess = "2.0.0-alpha.4"
