[package]
name = "s3-proxy"
version = "0.1.0"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7.14"
bytes = "0.4.10"
failure = "0.1.3"
futures = "0.1.25"
log = "0.4.6"
log4rs = "0.8.1"
mime_guess = "2.0.0-alpha.6"
num_cpus = "1.8.0"
rusoto_core = "0.35.0"
rusoto_s3 = "0.35.0"
serde = "1.0.80"
serde_derive = "1.0.80"
toml = "0.4.8"
