[package]
name = "s3-proxy"
version = "0.1.0"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]

[dependencies]
actix-web = "0.7.18"
bytes = "0.4.12"
failure = "0.1.5"
futures = "0.1.25"
log = "0.4.6"
log4rs = "0.8.1"
mime_guess = "2.0.0-alpha.6"
num_cpus = "1.10.0"
rusoto_core = "0.38.0"
rusoto_s3 = "0.38.0"
serde = "1.0.89"
serde_derive = "1.0.89"
toml = "0.5.0"
